fix spacing and remove shadows

--- a/assets/scss/pages/_checkout.scss
+++ b/assets/scss/pages/_checkout.scss
@@ -2,9 +2,13 @@
 	margin: 0 auto;
 
 	.masteriyo-col-2 {
-		gap: 30px;
+		margin-left: -#{$spacing_15px};
+		margin-right: -#{$spacing_15px};
+
 		& > * {
 			flex: 1 1 47%;
+			padding-left: $spacing_15px;
+			padding-right: $spacing_15px;
 		}
 	}
 
@@ -18,13 +22,11 @@
 		display: flex;
 		flex-direction: row;
 		flex-wrap: wrap;
-		gap: 30px;
 	}
 
 	&---fname-lname-wrapper {
 		display: flex;
 		flex-direction: row;
-		column-gap: 30px;
 	}
 
 	&----street > input {
@@ -35,9 +37,11 @@
 		display: flex;
 		flex-direction: column;
 		flex: 1 1 60%;
-		gap: 30px;
 		padding: $spacing_44px;
-		background: var(--masteriyo-color-white);
+
+		& > :not(:last-child) {
+			margin-bottom: $spacing_30px;
+		}
 	}
 
 	// Your order.
@@ -45,23 +49,23 @@
 		flex: 1 1 35%;
 
 		&-your-order {
-			@include masteriyo-shadow-2();
-			padding: $spacing_44px;
+			padding: $spacing_20px;
 			margin-bottom: $spacing_30px;
-			background: var(--masteriyo-color-white);
+			background-color: var(--masteriyo-color-white);
+			border: 1px solid var(--masteriyo-color-border);
 
 			ul {
 				margin: 0;
 				padding: 0;
 			}
 
-			ul li {
+			li {
 				list-style-type: none;
 				border-bottom: 1px solid var(--masteriyo-color-border);
 				display: flex;
 				flex-direction: row;
 				justify-content: space-between;
-				padding: $spacing_10px 0;
+				padding: $spacing_15px 0;
 
 				&.h-border {
 					border-bottom: 1px solid var(--masteriyo-color-black);
@@ -76,10 +80,10 @@
 
 	//Payment method.
 	&-summary-payment-method {
-		@include masteriyo-shadow-2();
-		padding: $spacing_16px $spacing_44px;
+		padding: $spacing_4px $spacing_20px;
 		margin-bottom: $spacing_30px;
 		background-color: var(--masteriyo-color-white);
+		border: 1px solid var(--masteriyo-color-border);
 
 		li.payment-method {
 			list-style-type: none;
@@ -103,7 +107,7 @@
 		display: flex;
 		align-items: center;
 		justify-content: space-between;
-		background: var(--masteriyo-color-white);
+		-color: var(--masteriyo-color-white);
 	}
 
 	&--btn {
